@@ -5,7 +5,7 @@
 ;;  Copyright (c) 2003 Time Intermedia Corporation, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: xml.scm,v 1.8 2003/12/29 04:23:05 shiro Exp $
+;; $Id: xml.scm,v 1.9 2003/12/30 07:19:10 shiro Exp $
 
 ;; This module provides the means of test the result of HTML
 ;; generating code, such as CGI programs.   The output of
@@ -367,12 +367,12 @@
 
 (define (test-sxml-match? pattern input . opts)
   (if (equal? input *test-error*)
-    input
+    (equal? pattern *test-error*)
     (apply match-input pattern (list input) opts)))
 
 (define (test-xml-match? pattern input . opts)
   (if (equal? input *test-error*)
-    input
+    (equal? pattern *test-error*)
     (apply match-input pattern
            (cdr (call-with-input-string (tree->string input)
                   (cut ssax:xml->sxml <> '())))
@@ -382,7 +382,7 @@
   (let ((selector (sxpath path)))
     (lambda (pattern input)
       (if (equal? input *test-error*)
-        input
+        (equal? pattern *test-error*)
         (apply match-input pattern
                ;; kludge to deal with *TOP*
                (selector (if (and (pair? input) (eq? (car input) '*TOP*))
@@ -394,7 +394,7 @@
   (let ((selector (sxpath path)))
     (lambda (pattern input)
       (if (equal? input *test-error*)
-        input
+        (equal? pattern *test-error*)
         (let ((parsed (call-with-input-string (tree->string input)
                         (cut ssax:xml->sxml <> '()))))
           (apply match-input pattern (selector parsed)
