@@ -1,3 +1,10 @@
+2003-12-29  Shiro Kawai  <shiro@acm.org>
+
+	* src/kahua/test/xml.scm : The last fix about *test-error* is wrong.
+	  If the test procedure gets *test-error* as input, it must compare
+	  whether the pattern is also *test-error*---otherwise, the test
+	  should fail anyway.
+
 2003-12-28  Shiro Kawai  <shiro@acm.org>
 
 	* cgi/kahua.cgi.in (send-reply) : pass PATH_INFO information (after
